Downgrade to 1.12.2, tested by Ayumii_