@@ -5,30 +5,30 @@ import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
 
+import java.util.Collections;
 import java.util.List;
 
 public class JustHorseCommand implements CommandExecutor, TabCompleter {
 
-    @Nullable
     @Override
-    public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
-        return List.of("");
+    public List<String> onTabComplete(CommandSender sender, Command command, String label, String[] args) {
+        return Collections.singletonList("");
     }
 
     @Override
-    public boolean onCommand(@NotNull CommandSender commandSender, @NotNull Command command, @NotNull String s, String[] args) {
+    public boolean onCommand(CommandSender commandSender, Command command, String s, String[] args) {
         if (args.length > 0) {
             commandSender.sendMessage(Main.usage);
             return true;
         }
 
-        if (!(commandSender instanceof Player player)) {
+        if (!(commandSender instanceof Player)) {
             commandSender.sendMessage(Main.onlyPlayer);
             return true;
         }
+
+        Player player = (Player) commandSender;
 
         if (!player.hasPermission(Main.permission)) {
             player.sendMessage(Main.noPermission);
